--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.4.4",
+    "xlsx": "^0.18.5"
   }
 }
